<resources>
    <string name="app_name">RAN</string>
    <string name="login_email" translatable="false">Email</string>
    <string name="login_password" translatable="false">Password</string>
    <string name="login_signin_button_text">Login</string>
    <string name="login_lost_password_button_text">Lost password?</string>
    <string name="login_signup_button_text">SIgn up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_email_error_text">Invalid email</string>
    <string name="login_password_error_text">Password must be 6 characters or more.</string>
    <string name="login_password_hint">password</string>
    <string name="login_password_hide">Show/hide password</string>
    <string name="login_name">Name</string>
</resources>
